--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 /* Global styles */
 :root {
     --background: #2e1e26; 
-    --background-light: #fdebf3;
-    --button: #78c2ad;
+    --background-light: #fbd5e0;
+    --button: #78b5c2;
     --text: #fdebf3;
     --text-light: #1e1e2e; 
     --text-link: #78c2ad;
@@ -254,6 +254,10 @@ footer {
 
 .mail-icon {
     content: url("/mail-white.svg");
+}
+
+.possum-icon {
+    content: url("/Emotes/gracePop.png");
 }
 
 .linked-in {
