Initial site release

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,6 @@ const pageTitle = "Possum Place";
 ---
 <Layout pageTitle={pageTitle}>
     
-    <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
-    </div>
     <h1>Stolen Goods</h1>
     <span class="badge">Software Engineer</span>
     
@@ -15,39 +12,22 @@ const pageTitle = "Possum Place";
         I'm Stolen Goods! I'm a Computer Science Master's student who likes games. 
         You might know me for the game design work I did for <a href="https://warsaken.cards/collection?s=setid:002">Warsaken Set 2</a> - I also did some designs for Set 4 and programming work for Eclectic Nerds!
     </p>
-    <div class="center">
-        <a href="/works/">
-            <button class="btn">My portfolio</button>
-        </a>
-    </div>
-    </p>
-    
-    <h2>Skills</h2>
-    <div class="skills center">
-        <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg"/>
-    </div>
     <p>
-        In addition to the programming bits above, I have:
-        <ol>
-            <li>blah</li>
-            <li>bloo</li>
-        </ol>
+        This site, like many sites, is perpetually under construction, and is currently maintained during my busy degree program. Check back for updates later!
     </p>
     
     <h2>Interests</h2>
     <p>
-        I like Magic: The Gathering and make my own custom cards for it! Check those out <a href="wew">here</a>!
+        I like Magic: The Gathering and make my own custom cards for it! Check those out <a href="https://mega.nz/folder/zL52ybZb#WFvQqXmx9pqbbOargWUMfw">here</a>!
         <br>
-        I also design my own characters for an as-of-yet-solidified setting. See a gallery <a href="wew">here</a>!
+        I also design my own characters! See a gallery <a href="https://mega.nz/folder/OSoCyBba#4NoVjWJ8puZXNS1q4WELMw">here</a>! Self-hosted galleries pending.
         <br>
         Beyond that, I'm currently enjoying Team Fortress 2, Baldur's Gate 3 and D&D in general, Dropout, and a smattering of board games.
     </p>
 
     <h2>Possums?</h2>
-    <a href="/silly/">
-        <img class="gif" width="480" height="360" src="marge.gif"/>
-    </a>
+    <div class = "center">
+        <img width="200" height="200" src="/Emotes/graceHug_crop.png">
+    </div>
 </Layout>
 
