--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,11 +5,11 @@ const year = new Date().getFullYear();
     <div class="center">
         <ul class="footer">
             <li class="icon__btn"><a class="icon__link" href="https://github.com/stlngds" target="_blank"><span class="git-icon">GitHub</span></a></li>
-            <li class="icon__btn"><a class="icon__link" href="/silly/" target="_blank"><span class="possum-icon">The Silly</span></a></li>
+            <li class="icon__btn"><a class="icon__link" target="_blank"><span class="possum-icon">The Silly</span></a></li>
         </ul>
         <small>&copy; {year} Stolen Goods</small>
         <br></br>
-        <small>Milky-Way theme by <a class="footer__link" href="https://github.com/ttomczak3">ttomczak</a>!</small>
+        <small>Milky-Way theme for Astro by <a class="footer__link" href="https://github.com/ttomczak3">ttomczak</a>!</small>
     </div>
 </footer>
 
