--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -6,10 +6,8 @@ const allProjects = await getCollection("projects");
 const pageTitle = "Works";
 ---
 <Layout pageTitle={pageTitle}>
-    <div class="gif">
-        <img width="372" height="328" alt="PlayingPossum" src="/graceDed.png"/>
-    </div>
     <h2>Projects</h2>
+    <p>This page is still being populated! Check out my GitHub, <a href="https://mega.nz/folder/OSoCyBba#4NoVjWJ8puZXNS1q4WELMw">art folder</a>, or the <a href="https://warsaken.cards/collection?s=setid:002">Warsaken card finder</a> for more stuff!
     <ul role="list" class="link-card-grid">
         {allProjects.map((card) => <Card 
             url={`/projects/${card.slug}/`} 
